esercizio pari o dispari

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Pari o Dispari</title>
 </head>
 <body>
     <h1>Giochiamo a pari o dispari</h1>
+    <script src="main.js"></script>
 </body>
 </html>
